formatting, text edit

--- a/index.html
+++ b/index.html
@@ -64,7 +64,48 @@
                     <div class="icon-gear"></div>
                     other tech.
                 </div>
-                <div id="tag-cloud"><svg width="220" height="160"><g><g transform="translate(110,80)"><text text-anchor="middle" transform="translate(6,-20)rotate(0)" style="font-size: 30px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Java</text><text text-anchor="middle" transform="translate(-16,22)rotate(0)" style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">jQuery</text><text text-anchor="middle" transform="translate(47,5)rotate(0)" style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">XML</text><text text-anchor="middle" transform="translate(38,33)rotate(0)" style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">C#</text><text text-anchor="middle" transform="translate(-41,-22)rotate(0)" style="font-size: 24px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSP</text><text text-anchor="middle" transform="translate(31,-39)rotate(0)" style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">J2EE</text><text text-anchor="middle" transform="translate(-37,-3)rotate(0)" style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Servlets</text><text text-anchor="middle" transform="translate(-34,-48)rotate(0)" style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">ASP.Net</text><text text-anchor="middle" transform="translate(-6,47)rotate(0)" style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Express</text><text text-anchor="middle" transform="translate(70,-22)rotate(0)" style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Struts</text><text text-anchor="middle" transform="translate(18,-65)rotate(0)" style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JDBC</text><text text-anchor="middle" transform="translate(-60,43)rotate(0)" style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSF</text><text text-anchor="middle" transform="translate(19,65)rotate(0)" style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">MySQL</text><text text-anchor="middle" transform="translate(-57,62)rotate(0)" style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Hibernate</text><text text-anchor="middle" transform="translate(69,19)rotate(0)" style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JPA</text><text text-anchor="middle" transform="translate(74,35)rotate(0)" style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Apache</text><text text-anchor="middle" transform="translate(78,-45)rotate(0)" style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Tomcat</text><text text-anchor="middle" transform="translate(53,49)rotate(0)" style="font-size: 9px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Docker</text></g></g></svg></div>
+                <div id="tag-cloud"><svg width="220" height="160">
+                        <g>
+                            <g transform="translate(110,80)"><text text-anchor="middle"
+                                    transform="translate(6,-20)rotate(0)"
+                                    style="font-size: 30px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Java</text><text
+                                    text-anchor="middle" transform="translate(-16,22)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">jQuery</text><text
+                                    text-anchor="middle" transform="translate(47,5)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">XML</text><text
+                                    text-anchor="middle" transform="translate(38,33)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">C#</text><text
+                                    text-anchor="middle" transform="translate(-41,-22)rotate(0)"
+                                    style="font-size: 24px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSP</text><text
+                                    text-anchor="middle" transform="translate(31,-39)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">J2EE</text><text
+                                    text-anchor="middle" transform="translate(-37,-3)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Servlets</text><text
+                                    text-anchor="middle" transform="translate(-34,-48)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">ASP.Net</text><text
+                                    text-anchor="middle" transform="translate(-6,47)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Express</text><text
+                                    text-anchor="middle" transform="translate(70,-22)rotate(0)"
+                                    style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Struts</text><text
+                                    text-anchor="middle" transform="translate(18,-65)rotate(0)"
+                                    style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JDBC</text><text
+                                    text-anchor="middle" transform="translate(-60,43)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSF</text><text
+                                    text-anchor="middle" transform="translate(19,65)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">MySQL</text><text
+                                    text-anchor="middle" transform="translate(-57,62)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Hibernate</text><text
+                                    text-anchor="middle" transform="translate(69,19)rotate(0)"
+                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JPA</text><text
+                                    text-anchor="middle" transform="translate(74,35)rotate(0)"
+                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Apache</text><text
+                                    text-anchor="middle" transform="translate(78,-45)rotate(0)"
+                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Tomcat</text><text
+                                    text-anchor="middle" transform="translate(53,49)rotate(0)"
+                                    style="font-size: 9px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Docker</text>
+                            </g>
+                        </g>
+                    </svg></div>
             </section>
 
             <section class="hobbies">
@@ -115,9 +156,9 @@
                 <section class="education__content">
                     <b>National Technical University of Ukraine (KPI)</b> </br>
                     <span class="education__info">Informatics and Computer Science, (FIOT) Technical
-                            Cybernetics</span>
+                        Cybernetics</span>
                     <span class="education__info">Specialty ‘Computer Science’ , ‘Flexible computerized systems and
-                            robotics’</span>
+                        robotics’</span>
                 </section>
             </section>
 
@@ -130,8 +171,8 @@
                 <section>
                     <div class="experience__item">
                         <span class="experience__item--left">
-                                <strong>Freelance</strong>
-                            </span>
+                            <strong>Freelance</strong>
+                        </span>
                         <span class="experience__item--right">01/2019 - present</span>
                         <div class="experience__item__description">
                             <ul>
@@ -144,24 +185,28 @@
 
                     <div class="experience__item">
                         <span class="experience__item--left">
-                                <strong> Luxoft, Ukraine/Kiev</strong>
-                            </span>
+                            <strong> Luxoft, Ukraine/Kiev</strong>
+                        </span>
                         <span class="experience__item--right">08/2013 - 09/2018</span>
                         <div class="experience__item__description">
                             <span class="m-upper">Team Lead/ Web Developer</span>
                             <ul>
-                                <li>Supprorting and developing new features of bank's main web-portal and plugins
+                                <li>
+                                    Supprorting and developing new features of bank's main web-portal, user portfolio
+                                    and plugins
                                 </li>
                                 <li>Managing team, planning development in Agile process</li>
-                                <li>HTML5/CSS3, Typescript, React, Redux, JS Canvas, Doker</li>
+                                <li>HTML5/CSS3, Typescript, React, JS Canvas, Doker</li>
                             </ul>
                         </div>
                         <div class="experience__item__description">
                             <span class="m-upper">Senior Web Developer</span>
                             <ul>
-                                <li>Designing and developing fully modular application with high level of customization
+                                <li>Designing and developing fully modular trading single-page application with high
+                                    level of customization
                                 </li>
-                                <li>Java, HTML5/CSS3, Typescript, React, Redux, RequireJS, Babel, npm</li>
+                                <li>Java, HTML5/CSS3, Typescript, React, React-Router, Redux-Observable, RequireJS,
+                                    Babel, NPM, WebPack</li>
                             </ul>
                         </div>
                         <div class="experience__item__description">
@@ -175,8 +220,8 @@
 
                     <div class="experience__item">
                         <span class="experience__item--left">
-                                <strong> PNN, Ukraine/Kiev</strong>
-                            </span>
+                            <strong> PNN, Ukraine/Kiev</strong>
+                        </span>
                         <span class="experience__item--right">04/2010 - 06/2013</span>
                         <span class="m-upper">Software developer</span>
                         <ul>
@@ -187,8 +232,8 @@
 
                     <div class="experience__item">
                         <span class="experience__item--left">
-                                <strong> JSC VTB Bank Ukraine (Outstaff)</strong>
-                            </span>
+                            <strong> JSC VTB Bank Ukraine (Outstaff)</strong>
+                        </span>
                         <span class="experience__item--right">09/2011 - 10/2012</span>
                         <span class="m-upper">Software developer</span>
                         <ul>
@@ -201,8 +246,8 @@
 
                     <div class="experience__item">
                         <span class="experience__item--left">
-                                <strong>University (KPI)</strong>
-                            </span>
+                            <strong>University (KPI)</strong>
+                        </span>
                         <span class="experience__item--right">10/2009 - 07/2010</span>
                         <div class="experience__item__description">
                             <ul>
