icons align; text decoration

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="header__avatar"></div>
             <div class="header__personal-info">
                 <span>Ukraine, Kiev</span>
-                <div class="icon-placeholder"></div>
+                <div class="icon icon-placeholder"></div>
                 <span> al3xandrienko@gmail.com</span>
-                <div class="icon-mail"></div>
+                <div class="icon icon-mail"></div>
                 <span>+380637900278</span>
-                <div class="icon-phone"></div>
+                <div class="icon icon-phone"></div>
             </div>
             <div class="bg-header"></div>
         </header>
