--- a/index.html
+++ b/index.html
@@ -67,42 +67,40 @@
                 <div id="tag-cloud"><svg width="220" height="160">
                         <g>
                             <g transform="translate(110,80)"><text text-anchor="middle"
-                                    transform="translate(6,-20)rotate(0)"
-                                    style="font-size: 30px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Java</text><text
-                                    text-anchor="middle" transform="translate(-16,22)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">jQuery</text><text
-                                    text-anchor="middle" transform="translate(47,5)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">XML</text><text
-                                    text-anchor="middle" transform="translate(38,33)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(0, 0, 0); font-family: Inconsolata;">C#</text><text
-                                    text-anchor="middle" transform="translate(-41,-22)rotate(0)"
-                                    style="font-size: 24px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSP</text><text
-                                    text-anchor="middle" transform="translate(31,-39)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">J2EE</text><text
-                                    text-anchor="middle" transform="translate(-37,-3)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Servlets</text><text
-                                    text-anchor="middle" transform="translate(-34,-48)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">ASP.Net</text><text
-                                    text-anchor="middle" transform="translate(-6,47)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Express</text><text
-                                    text-anchor="middle" transform="translate(70,-22)rotate(0)"
-                                    style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Struts</text><text
-                                    text-anchor="middle" transform="translate(18,-65)rotate(0)"
-                                    style="font-size: 18px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JDBC</text><text
-                                    text-anchor="middle" transform="translate(-60,43)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JSF</text><text
-                                    text-anchor="middle" transform="translate(19,65)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">MySQL</text><text
-                                    text-anchor="middle" transform="translate(-57,62)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Hibernate</text><text
-                                    text-anchor="middle" transform="translate(69,19)rotate(0)"
-                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">JPA</text><text
-                                    text-anchor="middle" transform="translate(74,35)rotate(0)"
-                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Apache</text><text
-                                    text-anchor="middle" transform="translate(78,-45)rotate(0)"
-                                    style="font-size: 12px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Tomcat</text><text
-                                    text-anchor="middle" transform="translate(53,49)rotate(0)"
-                                    style="font-size: 9px; fill: rgb(0, 0, 0); font-family: Inconsolata;">Docker</text>
+                                    transform="translate(-5,33)rotate(0)"
+                                    style="font-size: 30px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Java</text><text
+                                    text-anchor="middle" transform="translate(31,9)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">jQuery</text><text
+                                    text-anchor="middle" transform="translate(5,-14)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">XML</text><text
+                                    text-anchor="middle" transform="translate(53,-40)rotate(0)"
+                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">C#</text><text
+                                    text-anchor="middle" transform="translate(-51,-32)rotate(0)"
+                                    style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSP</text><text
+                                    text-anchor="middle" transform="translate(-46,-61)rotate(0)"
+                                    style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Express</text><text
+                                    text-anchor="middle" transform="translate(9,-41)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">J2EE</text><text
+                                    text-anchor="middle" transform="translate(-29,52)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Servlets</text><text
+                                    text-anchor="middle" transform="translate(-49,6)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">ASP.Net</text><text
+                                    text-anchor="middle" transform="translate(60,35)rotate(0)"
+                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Python</text><text
+                                    text-anchor="middle" transform="translate(-52,-14)rotate(0)"
+                                    style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Struts</text><text
+                                    text-anchor="middle" transform="translate(66,-11)rotate(0)"
+                                    style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JDBC</text><text
+                                    text-anchor="middle" transform="translate(-47,26)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSF</text><text
+                                    text-anchor="middle" transform="translate(36,61)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">MySQL</text><text
+                                    text-anchor="middle" transform="translate(-60,66)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Hibernate</text><text
+                                    text-anchor="middle" transform="translate(60,-66)rotate(0)"
+                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Patterns</text><text
+                                    text-anchor="middle" transform="translate(-85,-46)rotate(0)"
+                                    style="font-size: 12px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JPA</text>
                             </g>
                         </g>
                     </svg></div>
