--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 </div>
                 <section class="education__content">
                     <b>National Technical University of Ukraine (KPI)</b> </br>
-                    <span class="education__info">Informatics and Computer Science, (FIOT) Technical
+                    <span class="education__info">Informatics and Computer Science (FIOT), Technical
                         Cybernetics</span>
-                    <span class="education__info">Specialty ‘Computer Science’ , ‘Flexible computerized systems and
+                    <span class="education__info">Specialty ‘Computer Science’, ‘Flexible computerized systems and
                         robotics’</span>
                 </section>
             </section>
