--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Alexandr Andriienko Software Developer</title>
     <meta charset=utf-8 />
     <meta name=viewport content=width=device-width,initial-scale=1,shrink-to-fit=no>
+    <meta name="format-detection" content="telephone=no" />
     <link rel=stylesheet type="text/css" href="./dist/index.css">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
