cv edits; icons css import

--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
                     <li>PostCSS</li>
                     <li>RxJS</li>
                     <li>Ajax</li>
-                    <li>Algorithms</li>
+                    <li>Design Patterns</li>
                 </ul>
 
                 <div class="section-title">
                     <div class="icon-tools"></div>
                     Tools
                 </div>
-                <div>
-                    <p>Git, Hg, VSCode, Idea, SVN, WebPack, NPM, Windows, Linux, MasOS, Jira, Confluence, Gimp</p>
+                <div class="skills__tools">
+                        Git Hg VSCode Idea SVN WebPack NPM Windows Linux MasOS Jira
+                        Confluence Gimp
                 </div>
                 <div class="section-title">
                     <div class="icon-gear"></div>
