--- a/tag-generation.html
+++ b/tag-generation.html
@@ -31,11 +31,13 @@
                 { word: "Hibernate", size: scale * 0.5 },
                 { word: "Patterns", size: scale * 0.5 },
                 { word: "Express", size: scale * 0.8 },
-                { word: "GraphQL", size: scale * 0.5 },
+                { word: "GraphQL", size: scale * 0.8 },
                 { word: "Docker", size: scale * 0.3 },
                 { word: "Apache", size: scale * 0.4 },
                 { word: "Tomcat", size: scale * 0.4 },
-                { word: "Python", size: scale * 0.7 },
+                { word: "Python", size: scale * 0.5 },
+                { word: "Electron", size: scale * 0.6 },
+                { word: "Alrorithms", size: scale * 0.5 },
             ]
 
             // set the dimensions and margins of the graph
