--- a/index.html
+++ b/index.html
@@ -117,31 +117,37 @@
                 <figure>
                     <div class="icon icon-camera"></div>
                     <figcaption>
-                        <span>Photography</span>
+                        <span>photography</span>
                     </figcaption>
                 </figure>
                 <figure>
                     <div class="icon icon-gamepad"></div>
                     <figcaption>
-                        <span>Gaming</span>
+                        <span>gaming</span>
                     </figcaption>
                 </figure>
                 <figure>
                     <div class="icon icon-clapperboard"></div>
                     <figcaption>
-                        <span>Movies</span>
+                        <span>movies</span>
                     </figcaption>
                 </figure>
                 <figure>
                     <div class="icon icon-art"></div>
                     <figcaption>
-                        <span>Drawing</span>
+                        <span>drawing</span>
                     </figcaption>
                 </figure>
                 <figure>
                     <div class="icon icon-snowboard-race"></div>
                     <figcaption>
-                        <span>Snowboarding</span>
+                        <span>snowboarding</span>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <div class="icon icon-drums"></div>
+                    <figcaption>
+                        <span>drums</span>
                     </figcaption>
                 </figure>
 
