--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <div class="icon icon-placeholder"></div>
                 <span> al3xandrienko@gmail.com</span>
                 <div class="icon icon-mail"></div>
+                <span>alexandr.andrienko</span>
+                <div class="icon icon-skype"></div>
                 <span>+380637900278</span>
                 <div class="icon icon-phone"></div>
             </div>
