--- a/index.html
+++ b/index.html
@@ -42,16 +42,14 @@
                     skills
                 </div>
                 <ul class="skills__list">
-                    <li>
-                        EcmaScript 2019 (ES6+)
-                    </li>
+                    <li>EcmaScript 2019 (ES6+)</li>
                     <li>HTML5/ CSS3</li>
-                    <li>Node.JS</li>
-                    <li>TypeScript</li>
                     <li>React</li>
                     <li>Redux</li>
+                    <li>TypeScript</li>
                     <li>PostCSS</li>
                     <li>RxJS</li>
+                    <li>Node.JS</li>
                     <li>Ajax</li>
                     <li>Design Patterns</li>
                 </ul>
@@ -61,53 +59,14 @@
                     Tools
                 </div>
                 <div class="skills__tools">
-                        Git Hg VSCode Idea SVN WebPack NPM Windows Linux MasOS Jira
-                        Confluence Gimp
+                    Git Hg VSCode Idea SVN WebPack NPM Windows Linux MasOS Jira
+                    Confluence Gimp
                 </div>
                 <div class="section-title">
                     <div class="icon-gear"></div>
                     other tech.
                 </div>
-                <div id="tag-cloud"><svg width="220" height="160">
-                        <g>
-                            <g transform="translate(110,80)"><text text-anchor="middle"
-                                    transform="translate(-5,33)rotate(0)"
-                                    style="font-size: 30px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Java</text><text
-                                    text-anchor="middle" transform="translate(31,9)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">jQuery</text><text
-                                    text-anchor="middle" transform="translate(5,-14)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">XML</text><text
-                                    text-anchor="middle" transform="translate(53,-40)rotate(0)"
-                                    style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">C#</text><text
-                                    text-anchor="middle" transform="translate(-51,-32)rotate(0)"
-                                    style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSP</text><text
-                                    text-anchor="middle" transform="translate(-46,-61)rotate(0)"
-                                    style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Express</text><text
-                                    text-anchor="middle" transform="translate(9,-41)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">J2EE</text><text
-                                    text-anchor="middle" transform="translate(-29,52)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Servlets</text><text
-                                    text-anchor="middle" transform="translate(-49,6)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">ASP.Net</text><text
-                                    text-anchor="middle" transform="translate(60,35)rotate(0)"
-                                    style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Python</text><text
-                                    text-anchor="middle" transform="translate(-52,-14)rotate(0)"
-                                    style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Struts</text><text
-                                    text-anchor="middle" transform="translate(66,-11)rotate(0)"
-                                    style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JDBC</text><text
-                                    text-anchor="middle" transform="translate(-47,26)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSF</text><text
-                                    text-anchor="middle" transform="translate(36,61)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">MySQL</text><text
-                                    text-anchor="middle" transform="translate(-60,66)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Hibernate</text><text
-                                    text-anchor="middle" transform="translate(60,-66)rotate(0)"
-                                    style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Patterns</text><text
-                                    text-anchor="middle" transform="translate(-85,-46)rotate(0)"
-                                    style="font-size: 12px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JPA</text>
-                            </g>
-                        </g>
-                    </svg></div>
+                <div id="tag-cloud"><svg width="240" height="180"><g><g transform="translate(120,90)"><text text-anchor="middle" transform="translate(-11,-13)rotate(0)" style="font-size: 30px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Java</text><text text-anchor="middle" transform="translate(-53,6)rotate(0)" style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">jQuery</text><text text-anchor="middle" transform="translate(28,27)rotate(0)" style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">XML</text><text text-anchor="middle" transform="translate(-57,-24)rotate(0)" style="font-size: 27px; fill: rgb(86, 86, 86); font-family: Inconsolata;">C#</text><text text-anchor="middle" transform="translate(5,-43)rotate(0)" style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSP</text><text text-anchor="middle" transform="translate(36,48)rotate(0)" style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Express</text><text text-anchor="middle" transform="translate(-48,57)rotate(0)" style="font-size: 24px; fill: rgb(86, 86, 86); font-family: Inconsolata;">GraphQL</text><text text-anchor="middle" transform="translate(42,-22)rotate(0)" style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">J2EE</text><text text-anchor="middle" transform="translate(-47,34)rotate(0)" style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Servlets</text><text text-anchor="middle" transform="translate(-53,-51)rotate(0)" style="font-size: 21px; fill: rgb(86, 86, 86); font-family: Inconsolata;">ASP.Net</text><text text-anchor="middle" transform="translate(-42,-71)rotate(0)" style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Struts</text><text text-anchor="middle" transform="translate(7,-71)rotate(0)" style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JDBC</text><text text-anchor="middle" transform="translate(60,-5)rotate(0)" style="font-size: 18px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Electron</text><text text-anchor="middle" transform="translate(5,3)rotate(0)" style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JSF</text><text text-anchor="middle" transform="translate(62,-45)rotate(0)" style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">MySQL</text><text text-anchor="middle" transform="translate(37,74)rotate(0)" style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Hibernate</text><text text-anchor="middle" transform="translate(84,11)rotate(0)" style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Patterns</text><text text-anchor="middle" transform="translate(69,-63)rotate(0)" style="font-size: 15px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Python</text><text text-anchor="middle" transform="translate(-85,-19)rotate(0)" style="font-size: 12px; fill: rgb(86, 86, 86); font-family: Inconsolata;">JPA</text><text text-anchor="middle" transform="translate(87,29)rotate(0)" style="font-size: 12px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Apache</text><text text-anchor="middle" transform="translate(88,-25)rotate(0)" style="font-size: 12px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Tomcat</text><text text-anchor="middle" transform="translate(-85,-75)rotate(0)" style="font-size: 9px; fill: rgb(86, 86, 86); font-family: Inconsolata;">Docker</text></g></g></svg></div>
             </section>
 
             <section class="hobbies">
