--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span> Andrienko</span>
             </div>
             <div class="header__main-info">
-                10 years’ experience implementation of complex software solutions.
+                10 years’ experience of implementation of complex software solutions.
             </div>
             <div class="header__avatar"></div>
             <div class="header__personal-info">
@@ -59,7 +59,7 @@
                     Tools
                 </div>
                 <div class="skills__tools">
-                    Git Hg VSCode Idea SVN WebPack NPM Windows Linux MasOS Jira
+                    Git Hg VSCode Idea SVN WebPack NPM Windows Linux MacOS Jira
                     Confluence Gimp
                 </div>
                 <div class="section-title">
@@ -159,11 +159,11 @@
                             <span class="m-upper">Team Lead/ Web Developer</span>
                             <ul>
                                 <li>
-                                    Supprorting and developing new features of bank's main web-portal, user portfolio
+                                    Supporting and developing new features of bank's main web-portal, user portfolio
                                     and plugins
                                 </li>
                                 <li>Managing team, planning development in Agile process</li>
-                                <li>HTML5/CSS3, Typescript, React, JS Canvas, Doker</li>
+                                <li>HTML5/CSS3, Typescript, React, JS Canvas, Docker</li>
                             </ul>
                         </div>
                         <div class="experience__item__description">
@@ -192,7 +192,7 @@
                         <span class="experience__item--right">04/2010 - 06/2013</span>
                         <span class="m-upper">Software developer</span>
                         <ul>
-                            <li>Design and developing web application for photographers and publishers. </li>
+                            <li>Designing and developing web application for photographers and publishers. </li>
                             <li>C#, MSSQL, ASP.Net, JS, jQuery</li>
                         </ul>
                     </div>
