--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <span class="m-upper">Team Lead/ Web Developer</span>
                             <ul>
                                 <li>
-                                    Supporting and developing new features of bank's main web-portal, user portfolio
+                                    Support and development of new features for bank's main Web portal, user portfolio
                                     and plugins
                                 </li>
                                 <li>Managing team, planning development in Agile process</li>
@@ -179,7 +179,7 @@
                         <div class="experience__item__description">
                             <span class="m-upper">Middle fullstack dev</span>
                             <ul>
-                                <li>Developing new functionality on existing derivative trading webb app</li>
+                                <li>Developing new functionality on existing derivative trading Web application</li>
                                 <li>Java, Stripes, ST-JS, JQuery, HTML/CSS2</li>
                             </ul>
                         </div>
@@ -192,7 +192,7 @@
                         <span class="experience__item--right">04/2010 - 06/2013</span>
                         <span class="m-upper">Software developer</span>
                         <ul>
-                            <li>Designing and developing web application for photographers and publishers. </li>
+                            <li>Designing and developing Web application for photographers and publishers. </li>
                             <li>C#, MSSQL, ASP.Net, JS, jQuery</li>
                         </ul>
                     </div>
