minor text correction

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <span class="experience__item--right">01/2019 - present</span>
                         <div class="experience__item__description">
                             <ul>
-                                <li>Developing Web and PWA applications</li>
+                                <li>Development of Web and PWA applications</li>
                                 <li>Electron, desktop applications development</li>
                                 <li>React, Redux, TypeScript, WebPack, NPM, HTML5/CSS3</li>
                             </ul>
