--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
                 </div>
                 <ul class="skills__list">
                     <li>EcmaScript 2019 (ES6+)</li>
-                    <li>HTML5/ CSS3</li>
+                    <li>TypeScript</li>
                     <li>React</li>
                     <li>Redux</li>
-                    <li>TypeScript</li>
+                    <li>MobX</li>
+                    <li>HTML5/ CSS3</li>
                     <li>PostCSS</li>
                     <li>RxJS</li>
                     <li>Node.JS</li>
@@ -59,8 +60,8 @@
                     Tools
                 </div>
                 <div class="skills__tools">
-                    Git Hg VSCode Idea SVN WebPack NPM Windows Linux MacOS Jira
-                    Confluence Gimp
+                    Git Hg VSCode Idea SVN Perforce WebPack NPM HelixSwarm Windows Linux MacOS Jira
+                    Confluence Gimp 
                 </div>
                 <div class="section-title">
                     <div class="icon-gear"></div>
@@ -137,14 +138,27 @@
                 <section>
                     <div class="experience__item">
                         <span class="experience__item--left">
+                            <strong>Blackwood Games</strong>
+                        </span>
+                        <span class="experience__item--right">05/2020 - present</span>
+                        <div class="experience__item__description">
+                            <span class="m-upper">Senior Frontend Programmer</span>
+                            <ul>
+                                <li>New UI development for AAA ingame client</li>
+                                <li>React, TypeScript, MobX, WebPack, SCSS</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="experience__item">
+                        <span class="experience__item--left">
                             <strong>Freelance</strong>
                         </span>
-                        <span class="experience__item--right">01/2019 - present</span>
+                        <span class="experience__item--right">01/2019 -10/2020</span>
                         <div class="experience__item__description">
                             <ul>
                                 <li>Development of Web and PWA applications</li>
-                                <li>Electron, desktop applications development</li>
-                                <li>React, Redux, TypeScript, WebPack, NPM, HTML5/CSS3</li>
+                                <li>Electron, desktop applications / Single Page applications</li>
+                                <li>React, Redux, TypeScript, MATERIAL-UI, WebPack, NPM, HTML5/CSS3</li>
                             </ul>
                         </div>
                     </div>
@@ -158,8 +172,7 @@
                             <span class="m-upper">Team Lead/ Web Developer</span>
                             <ul>
                                 <li>
-                                    Support and development of new features for bank's main Web portal, user portfolio
-                                    and plugins
+                                    Support and development of new features for bank's main Web portal, user portfolio and plugins
                                 </li>
                                 <li>Managing team, planning development in Agile process</li>
                                 <li>HTML5/CSS3, Typescript, React, JS Canvas, Docker</li>
@@ -168,7 +181,7 @@
                         <div class="experience__item__description">
                             <span class="m-upper">Senior Web Developer</span>
                             <ul>
-                                <li>Designing and developing fully modular trading single-page application with high
+                                <li>Developing fully modular trading single-page application with high
                                     level of customization
                                 </li>
                                 <li>Java, HTML5/CSS3, Typescript, React, React-Router, Redux-Observable, RequireJS,
@@ -178,7 +191,7 @@
                         <div class="experience__item__description">
                             <span class="m-upper">Middle fullstack dev</span>
                             <ul>
-                                <li>Developing new functionality on existing derivative trading Web application</li>
+                                <li>Developing derivative trading Web application</li>
                                 <li>Java, Stripes, ST-JS, JQuery, HTML/CSS2</li>
                             </ul>
                         </div>
@@ -204,7 +217,7 @@
                         <span class="m-upper">Software developer</span>
                         <ul>
                             <li>Integration with the Bank systems, Ldap, Hyperion </li>
-                            <li> Frontend development of primitive UI </li>
+                            <li>Frontend development of primitive UI </li>
                             <li>Java, IBM Process Server 7.0, ESB 7.0, IBM Portal 7.0, IBM HTTP, Oracle SQL Server 11
                             </li>
                         </ul>
