--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="icon icon-mail"></div>
                 <span>alexandr.andrienko</span>
                 <div class="icon icon-skype"></div>
-                <span>+380637900278</span>
+                <span> <a href="tel:+380637900278">+38(063)790-02-78</a></span>
                 <div class="icon icon-phone"></div>
             </div>
             <div class="bg-header"></div>
@@ -39,7 +39,7 @@
             <section class="skills">
                 <div class="section-title">
                     <div class="icon-fix"></div>
-                    skills
+                    main skills
                 </div>
                 <ul class="skills__list">
                     <li>EcmaScript 2019 (ES6+)</li>
@@ -145,7 +145,7 @@
                             <span class="m-upper">Senior Frontend Programmer</span>
                             <ul>
                                 <li>New UI development for AAA ingame client</li>
-                                <li>React, TypeScript, MobX, WebPack, SCSS</li>
+                                <li>React, TypeScript, MobX, WebPack, SASS, Coherent Gameface</li>
                             </ul>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             </ul>
                         </div>
                         <div class="experience__item__description">
-                            <span class="m-upper">Middle fullstack dev</span>
+                            <span class="m-upper">Middle fullstack Developer</span>
                             <ul>
                                 <li>Developing derivative trading Web application</li>
                                 <li>Java, Stripes, ST-JS, JQuery, HTML/CSS2</li>
